  'Delete to End of Line' were bound to S+BACK_SPACE and S+DELETE,
  respectively, because it was easy to accidentally invoke them when
  you meant to press just BACK_SPACE or DELETE if you were typing some
  capitalized text. Now the shortcuts of these commands has been changed
  to CS+BACK_SPACE and CS+DELETE, respectively.
- BeanShell 1.2b41 included
- Documentation updates

+ Bug Fixes

- First time jEdit was run, the file system's divider position would be
  such that the parent directories list would be invisible
- 'End' key didn't work properly
- Due to the changes in buffer property handling caused by the
  transition to the new document model, new files would always have the
  system default line separator and encoding, instead of the defaults
  that were specified in the 'Loading and Saving' option pane
- Changing the fold mode by clicking in the status bar did not expand
  currently collapsed folds, which could result in portions of the
  buffer becoming inaccessable
- Fixed ugly memory usage indicator on MacOS X
- Even when 'quick copy' was disabled in the text area option pane, the
  middle-drag feature would still be active
- Fixed ArrayIndexOutOfBoundsException when triple-clicking on the only
  line of a blank new file
- Fixed repaint slowdown that would happen when switching menus on some
  JDKs
- If the file system browser was set to show hidden files by default,
  the state of the 'show hidden files' menu item in the browser's
  "Commands" menu would be reversed
- Fixed dockable panel layout problem if there were more buttons than
  can fit
- Fixed a problem when dockable panels were larger than the size of the
  view
- 'Select All' button in close dialog box didn't work
- Shortcuts assigned to CA+x where x was a letter didn't work. I hope
  the fix for this didn't break AltGR sequences; let me know if it did
- 'Run Last Macro' and 'Run Other Macro' commands assumed the macro was
  written in BeanShell (Mike Dillon)